# fhe-reliability-gpu

./: .clangd  .gitignore  README.md
profile_framewk/: CMakeLists.txt  README.md  draw_atom_opt_cost.py  draw_dnum.py  draw_dnum_rot_mul.py  draw_ntt_reliability.py  draw_poly_rot_mul.py  draw_rotation.py  polydim_costs_yminus1_bars.csv  polydim_costs_yminus1_noOthers.csv
profile_framewk/.cache/clangd/index/: dotprod.cpp.FC60DE29D7AE7FB7.idx  dotprod_bfv.cpp.0DE8D40A2FD649D2.idx  dotprod_ckks.cpp.0CBB1B0DBD52F4EB.idx  dotprod_ckks_openfhe.cpp.4358CAEF70E8707D.idx  examples.h.0A33D575751DAE2E.idx  framewk.cpp.44A8F5582E851B26.idx  matmul_ckks.cpp.8552963235D50DF8.idx
profile_framewk/include/: examples.h  microtest.h
profile_framewk/profile_data/: draw_full_profile.py
profile_framewk/profile_data/bfv/: adding.info  draw_info.py  multiply.info  multiply_plain.info  relinearize.info  rotate_columns.info  rotate_onestep.info  rotate_random.info  serialize.info  serialize_ZLIB.info  serialize_Zstandard.info  square.info
profile_framewk/profile_data/bfv/adding/: callgrind.out.909903  callgrind.out.909903.1  callgrind.out.909903.10  callgrind.out.909903.11  callgrind.out.909903.12  callgrind.out.909903.13  callgrind.out.909903.14  callgrind.out.909903.15  callgrind.out.909903.16  callgrind.out.909903.17  callgrind.out.909903.18  callgrind.out.909903.19  callgrind.out.909903.2  callgrind.out.909903.20  callgrind.out.909903.21  callgrind.out.909903.22  callgrind.out.909903.23  callgrind.out.909903.24  callgrind.out.909903.25  callgrind.out.909903.26  callgrind.out.909903.27  callgrind.out.909903.28  callgrind.out.909903.29  callgrind.out.909903.3  callgrind.out.909903.30  callgrind.out.909903.4  callgrind.out.909903.5  callgrind.out.909903.6  callgrind.out.909903.7  callgrind.out.909903.8  callgrind.out.909903.9
profile_framewk/profile_data/bfv/multiply/: callgrind.out.910345  (+30 more)
profile_framewk/profile_data/bgv/: adding.info  batch_callgrind.sh  draw_info.py  multiply.info  multiply_plain.info  relinearize.info  rotate_columns.info  rotate_onestep.info  rotate_random.info  serialize.info  serialize_ZLIB.info  serialize_Zstandard.info  square.info
profile_framewk/profile_data/ckks/: adding.info  batch_callgrind.sh  complex_conjugate.info  draw_info.py  multiply.info  multiply_plain.info  relinearize.info  rescale.info  rotate_vector.info  rotate_vector_random.info  serialize.info  serialize_ZLIB.info  serialize_Zstandard.info  square.info
profile_framewk/src/: dotprod_bfv.cpp  dotprod_ckks.cpp  framewk.cpp  matmul_ckks.cpp
reliability_test/: CMakeLists.txt  build.sh  dotprod  dotprod.cu  dotprod_real_test.cu  dotprod_test.cu  errorset.txt  exp_log.txt  four_step_ntt_prot.py  naive_gemm_test.cu  ntt_real_test  ntt_real_test.cu  ntt_test  ntt_test.cu  run_bench_test.sh  run_dotprod_simu.sh  run_real_test.sh  symbolerror.txt
reliability_test/data/: bits1-16_num1.txt  bits1_num1-8.txt  dotprod_16bits_50.txt  flipimpact.csv
reliability_test/draw_scripts/: draw_dotprod.py  draw_err_scatter.py  draw_plot.py
reliability_test/test_scripts/: gen_errorimpact.py
rfhe_framewk/: CMakeLists.txt
rfhe_framewk/src/: barret_modmul.cpp  barret_modmul.py  barrett_final  barrett_final.cpp  barrett_final.py  barrett_inner.py  barrett_modmul  baseConv  baseConv.cpp  baseConv.cu  baseConv.py  draw_barrett.py  draw_evaluator_reliability.py  four_step_ntt_protected  four_step_ntt_protected.cpp  four_step_ntt_protected.py  intra.txt  montgomery.py  montgomery_modmul  montgomery_modmul.cpp  montgomery_modmul_1element_1flip  montgomery_modmul_1element_2flip  montgomery_modmul_2element_1flip  negaclic_ntt.py  ntt.py  ntt_matmul_protect.py  range.txt  results_pbits_2_14_W24_N64_T1e7_seed42.txt  run_ntt_test.sh  sum.txt
rfhe_framewk/src/barrett_test/: RangeCheck.csv  barrett_prot  barrett_prot.cpp  draw_outter.py  inner_check.py  outer_check  outer_check.cpp  outer_check.py  outer_check_append.csv  outer_check_by_prime.cpp  outer_check_byprime  outer_check_byprime.txt
rfhe_framewk/src/ntt_test/: draw_non_4step_ntt.py  non_four_step_ntt_sim.cpp  reliaNTT  reliaNTT_full_results.csv  reliaNTT_test_result.txt  reliaNon4stepNTT  relia_ntt_sim.cpp  relia_ntt_sim.py  test_reliaNTT.sh
(+1005 files in other folders)
